syntax = "proto2";

package fetch.oef.pb;

import "query.proto";
import "fipa.proto";

message Agent {
    message Server {
        message ID {
            required string public_key = 1;
        }       
        message Answer {
            required string answer = 1;
        }
    }
    message Message {
        required int32 dialogue_id = 1;
        required string destination = 2;
        oneof payload {
            bytes content = 3;
            Fipa.Message fipa = 4;
        }
    }
}

message Server {
    message Phrase {
        message Failure {
        }
        oneof payload {
            string phrase = 1;
            Failure failure = 2;
        }
    }
    message Connected {
        required bool status = 1;
    }
    message SearchResult {
        repeated string agents = 1;
    }
    
    message AgentMessage {
        message Content {
            required int32 dialogue_id = 1;
            required string origin = 2;
            oneof payload {
                  bytes content = 3;
                  Fipa.Message fipa = 4;
            }
        }
        message OEFError {
            enum Operation {
                REGISTER_SERVICE = 0;
                UNREGISTER_SERVICE = 1;
                REGISTER_DESCRIPTION = 2;
                UNREGISTER_DESCRIPTION = 3;
            }
            required Operation operation = 1;
        }
        message DialogueError {
            required int32 dialogue_id = 1;
            required string origin = 2;
        }
        required int32 answer_id = 1;
        oneof payload {
            Content content = 2; // from agent
            OEFError oef_error = 3;   // from oef
            SearchResult agents = 4; // from oef
            DialogueError dialogue_error = 5;
        }
    }
}

message AgentDescription {
    required Query.Instance description = 1; 
}

message AgentSearch {
    required Query.Model query = 1;
}

message Envelope {
    message Nothing {}
    required int32 msg_id = 1;
    oneof payload {
        Agent.Message send_message = 2;
        AgentDescription register_service = 3;
        AgentDescription unregister_service = 4;
        AgentDescription register_description = 5;
        Nothing unregister_description = 6;
        AgentSearch search_services = 7;
        AgentSearch search_agents = 8;
    }
}

message Data {
    required string name = 1;
    required string type = 2; // should be enum
    repeated string values = 3;
}

message Boolean {
    required bool status = 1;
}

message Transaction {
    required uint64 amount = 1;
}

// option optimize_for = LITE_RUNTIME;
option optimize_for = SPEED;